# simpleGL

./: CMakeLists.txt  README.md  glad.c  main.cpp  simpleGL.hpp
assignments/: Jiawei-Liu-CS100433-ASSIGNMENT-2.md  Jiawei-Liu-CS100433-ASSIGNMENT-3.md
demos/: cube.hpp  solar_system.hpp  tex_and_lights.hpp  texture_demo.hpp  triangle.hpp  window.hpp
shaders/: cube_demo.fragment  cube_demo.vertex  ss.fragment  ss.vertex  triangle_demo.fragment  triangle_demo.vertex  tx.fragment  tx.vertex
